# bfjit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: bfjit.h  bfjit_internal.h  bfparser.h
src/: bfjit.c  bfjit_backend.c  bfjit_backend_aarch64.c  bfjit_backend_shared.c  bfjit_backend_x86_64.c  bfjit_codegen.c  bfjit_runtime.c  bfopt.c  bfparser.c  main.c
